# python-bme280

./: .gitignore  .pylintrc  .pyup.yml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  demo.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
bme280/: __init__.py  bme280.py
tests/: bme280_test.py
tests/snapshots/: snap_bme280_test.py
